--- a/backend/conda-env-docker.yml
+++ b/backend/conda-env-docker.yml
@@ -17,4 +17,5 @@ dependencies:
     - flask-restx==1.3.0
     - SQLAlchemy==2.0.36
     - python-dotenv==1.0.1
+    - openai==1.58.1
     - gunicorn==23.0.0
