--- a/backend/conda-env.yml
+++ b/backend/conda-env.yml
@@ -17,6 +17,7 @@ dependencies:
     - flask-restx==1.3.0
     - SQLAlchemy==2.0.36
     - python-dotenv==1.0.1
+    - openai==1.58.1
 
     # For dev only
     - ipywidgets==8.1.5
