added unit tests for backend, minor UI change for frontend, minor fix for backend docker and compose

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 backend/notebooks/data/*
 backend/notebooks/.env
 backend/.env
+__pycache__
 frontend/build
 frontend/node_modules
-__pycache__
+secrets_openai_api_key.txt
