--- a/backend/conda-env-docker.yml
+++ b/backend/conda-env-docker.yml
@@ -18,4 +18,6 @@ dependencies:
     - SQLAlchemy==2.0.36
     - python-dotenv==1.0.1
     - openai==1.58.1
+
+    # For prod only
     - gunicorn==23.0.0
