--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: whisper-app-be
+    env_file:
+      - ./backend/.env
     environment:
       - MODE=prod
       - DB_NAME=db_filled.db
